--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
     </head>
     <body style="background-color: bisque;">
         <h1 style="font-family: 'Courier New', Courier, monospace; color: rgb(162, 0, 255);">Welcome to HTML JavaScript at NEIT</h1>
-        <p>Hello how are you today?</p>
+        <p>Below are a list of links to all class files</p>
+        <ul>
+            <li>Week 1</li>
+            <li>Week 2</li>
+            <li>Week 3</li>
+            <li>Week 4</li>
+        </ul>
     </body>
 </html>
 
