--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li>Week 3</li>
             <li>Week 4</li>
         </ul>
+        <a href="w1/index.html">Link to Week 1 Lab</a>
     </body>
 </html>
 
