--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h1 style="font-family: 'Courier New', Courier, monospace;  color:rgb(71, 4, 115)">Welcome to HTML JavaScript at NEIT</h1>
         <p>Below are a list of links to all class files</p>
         <ul>
-            <li>Week 1</li>
-            <li>Week 2</li>
+            <li><a href="Week1/index.html">Link to Week 1 Lab</a></li>
+            <li><a href="Week2/relativeandabsolute.html">Link to Week 2 Lab</a></li>
             <li>Week 3</li>
             <li>Week 4</li>
         </ul>
