Added Week 2 Assignment to Main Pain

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="Week1/index.html">Link to Week 1 Lab</a></li>
             <li><a href="Week2/relativeandabsolute.html">Link to Week 2 Lab</a></li>
             <li><a href="Week2/file-paths-incorrect/index.html">Link to Week 2 Assignment | File Paths Incorrect</a></li>
+            <li><a href="Week2/file-paths-correct/index.html">Link to Week 2 Assignment | File Paths Correct</a></li>
             <li>Week 3</li>
             <li>Week 4</li>
         </ul>
