End of Class Week 3

--- a/Week3/index.html
+++ b/Week3/index.html
@@ -5,32 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Town of South Park</title>
-    <style>
-        h1{
-            color: blue;
-            text-decoration: underline;
-            font-family: 'Courier New', Courier, monospace;
-        }
-        #container{
-            width: 600px;
-            border: 2px solid red;
-            background-color: azure;
-        }
-        body,html{
-          display: flex;
-          justify-content: center;
-          background-color: cadetblue;  
-        }
-        #nav{
-            text-align: center;
-        }
-        .nav-list{
-            list-style: none;
-            display: inline;
-            text-align: center;
-            padding: 15px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!--Example of Website Mainframe-->
@@ -51,8 +26,9 @@
         <!--Content Area-->
         <div id="content">
             <!--Content Goes Here-->
-            <h2 id="section-header">Welcome to the town of South Park's website</h2>
+            <h2 class="section-header">Welcome to the town of South Park's website</h2>
             <p class="section-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius ex deserunt atque iusto qui corporis harum, eligendi libero recusandae veniam voluptates minima animi nulla inventore unde itaque! Itaque, nihil obcaecati. Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, aperiam. Sit voluptatibus eos doloremque asperiores voluptatem, possimus laudantium ipsa repellendus soluta debitis accusamus rerum in saepe doloribus magni, minima vero? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos eius iure at maxime magnam id, soluta sunt voluptates odio temporibus cum incidunt culpa deserunt consequatur velit reprehenderit repellendus quibusdam. Laboriosam.</p>
+            <img src="../Week2/images/southpark.jpg" alt="Southpark Image" width="200">
         </div>
         <!--Footer-->
         <div id="footer">
