--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
         <p>Below are a list of links to all class files</p>
         <ul>
             <li><a href="Week1/index.html">Link to Week 1 Lab</a></li>
-            <li><a href="Week2/relativeandabsolute.html">Link to Week 2 Lab</a></li>
-            <li>Week 3</li>
-            <li>Week 4</li>
+            <li><a href="Week2/rellativeAndAbsolute.html">Link to Week 2 Lab</a></li>
+            <li><a href="Week2/IDandFragment.html">Week 3</a> </li>
+            <li><a href="Week3/index.html">South Park Site</a></li>
         </ul>
+        
     </body>
 </html>
-
-
