--- a/Week6/index.html
+++ b/Week6/index.html
@@ -2,60 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 6 | JavaScript Lab</title>
+    <title>Week 6 | JavaScript Assignment</title>
 </head>
-<body>
-    <!--Actual HTML-->
-    <h1>Week 6 | JavaScript Lab</h1>
-    <p></p>
-    <button>Call Function</button>
+<body style="background-color: bisque;">
+    <h1>Week 6 | JavaScript Assignment</h1>
     <script>
-        //Your JavaScript Goes here
-        var firstName = "Jordan";
-        var lastName = "Dubreuil";
-        var message = `Hello ${firstName} ${lastName}!`;
-        var para = "Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores tenetur consequuntur sequi quas corrupti eligendi id blanditiis impedit adipisci molestiae praesentium, facere provident quae! Tenetur aliquid reprehenderit porro ullam natus!";
-        //example of alert function
-        //alert(firstName + " " + lastName);
-        console.log(`${firstName} ${lastName}`);
-        //This should output message to the page
+        var taxFee = 0.20;
 
-        function outputToPage(tag, msg, color){
-            document.querySelector(tag).innerHTML = msg;
-            document.querySelector(tag).style.color = color;
-        }
-        
-        outputToPage("h1", message, "blue");
-        outputToPage("p", para, "green");
+        var wage = Number(prompt(`Please enter your wage.`));
+        var hours = Number(prompt(`Please enter the hours you worked.`));
 
-        //Example of event handler
-        var dataPromptButton = document.querySelector("button");
-        dataPromptButton.addEventListener('click', dataPrompt);
+        var grossPay = wage * hours * 2;
+        var taxes = grossPay * taxFee;
+        var netPay = grossPay - taxes;
 
-        function dataPrompt(){
-            alert(`My name is ${firstName} welcome my program.`);
-            var yourName = prompt("Please tell me your name.");
-            alert(`Hello ${yourName}! Nice to meet you.`);
-            var yourLastName = prompt(`Please enter your last name.`);
-            alert(`Your full name is ${yourName} ${yourLastName}!`);
+        console.log("Gross Earnings",grossPay);
+        console.log("Net Earnings",netPay);
+        console.log("Taxes Paid",taxes);
 
-            var firstNumber = prompt("Please enter a number.");
-            var secondNumber = prompt("Please enter another number.");
-
-            var result = Number(firstNumber) * Number(secondNumber);
-
-            alert(`Here is your result: ${result}`);
-
-            var documentBody = document.querySelector("body");
-            var outputData = document.createElement("p");
-
-            outputData.innerHTML = `Your name is ${yourName} ${yourLastName}<br> The result of your numbers is ${result}<br>Thank you from ${firstName} ${lastName}`;
-
-            documentBody.appendChild(outputData);
-
-        }
+        alert(`
+            Gross Earnings: ${grossPay}
+            Net Earnings: ${netPay}
+            Taxes Paid: ${taxes}
+        `);
     </script>
 </body>
 </html>
