--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <!--
-            Jordan Dubreuil
+            Andrew Glidden
             SE 111.03
             January 9, 2024
         -->
