Added Jordan's files from class

--- a/Week9/index.html
+++ b/Week9/index.html
@@ -2,26 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Final Lab BOM and DOM | Week 8</title>
+        <title>Final Lab BOM and DOM Week 8</title>
+        <script src="slideshow.js"></script>
     </head>
     <body>
         <h1>Final Review Lab BOM and DOM Week 9</h1>
-        <img src="images/EricCartman.png" alt="South Park Images" width="200">
+        <img id="site-image" src="images/EricCartman.png" alt="South Park Images" height="300">
         <br>
         <button id="slideshow-button">Start Slideshow</button>
-        <script>
-            window.onload() = function(){
-                document.querySelector('h1').innerHTML = "South Park Slideshow";
-
-                var image = 0;
-                var images = {
-                    "EricCartman.png",
-                    "KennyMcCormick.png",
-                    "KyleBroflovski.png",
-                    "southpark.jpg",
-                    "StanMarsh.png"
-                };
-            }
-        </script> 
+        
     </body>
 </html>
